Fixed many misc thing